--- a/maintstyle.css
+++ b/maintstyle.css
@@ -12,175 +12,13 @@ html, body {
 	font-family: 'Lato', Helvetica, sans-serif;
 }
 
-/* Basic Pages */
-
-.page {
-	width: 100%;
-	float: left;
-	position: relative;
-}
-
-.page:before,
-.page:after {
-    content: "";
-    display: table;
-}
-
-.page:after {
-    clear: both;
-}
-
-.pagecontent {
-	max-width: 1024px;
-	margin: 0 auto;
-	border: 1px solid yellow;
-	box-sizing:border-box;
-}
-
-.halfcontent {
-	display: inline;
-	float: left;
-	width: 50%;
-	text-align: left;
-}
-
-.quote {
-	float: right;
-	width: 40%;
-	border: 1px solid purple;
-	box-sizing:border-box;
-}
-
-#top {
-	min-height: 100%;
-	background: white;
-	border: 1px solid red;
-	box-sizing:border-box;
-}
-
-#about {
-	background: #A8A8A8 ;
-	border: 1px solid blue;
-	box-sizing:border-box;
-}
-
-#uclamap {
-	height: 45%;
-	border: 1px solid green;
-	box-sizing:border-box;
-}
-
-#social {
-	background: #484848;
-	border: 1px solid yellow;
-	box-sizing:border-box;
-}
-
-#contact {
-	float: left;
-	width: 100%;
-	background: #181818;
-	border: 1px solid red;
-	box-sizing:border-box;
-}
-
-#footer {
-	color: #CCCCCC;
-	background: black;
-	font-size: 75%;
-	border: 1px solid orange;
-	box-sizing:border-box;
-}
-
-/* Nav */
-
-nav {
-	position: fixed;
-	background: white;
-	width: 100%;
-	height: 50px;
-	line-height: 50px;
-	z-index: 2;
-	box-shadow: 5px 5px 5px #888888;
-}
-
-nav a {
-	color: black;
-	padding: 15px;
-}
-
-/* Intro */
-
-.intro {
-	margin: 50px;
-}
-
-#introimg {
-	max-width: 1024px;
-	position: relative;
-	margin-top: 250px;
-	min-width: 300px;
-}
-
-#intro1 {color: #C0C0C0;}
-#intro2 {color: grey;}
-#intro3 {color: black;}
-
-#downarrow {
-	position: fixed;
-    z-index: 10;
-	bottom: 0px;
-	left: 0px;
-	margin: 40px;
-}
-
-/* About */
-
-#portrait {
-	height: 400px;
-}
-
-#aboutbrief {
-	height: 400px;
-}
-
-/* Social Media */
-
-.social {
-	height: 600px;
-	text-align: center;
-}
-
-#twitter-api {
-}
-
-#twitter-img {
-}
-
-#linkedin-api {
-}
-
-#linkedin-img {
-}
-
-#github-api {
-}
-
-#github-img {
-}
-
-#facebook-api {
-}
-
-#facebook-img {
-}
-
 h1, h2, h3 {font-weight: 400;}
 
 h1 {
-	font-size: 2em;
-	margin-top: 50px;
-	padding: 30px;
+	font-size: 3em;
+	margin-top: 40px;
+	padding: 20px;
+	font-weight: 300;
 }
 
 h2 {
@@ -214,6 +52,158 @@ pre {
 	font-size: 1.2em;
 }
 
+/* Basic Pages */
+
+.page {
+	width: 100%;
+	float: left;
+	position: relative;
+}
+
+.page:before,
+.page:after {
+    content: "";
+    display: table;
+}
+
+.page:after {
+    clear: both;
+}
+
+.pagecontent {
+	max-width: 1024px;
+	margin: 0 auto;
+}
+
+.halfcontent {
+	display: inline;
+	float: left;
+	width: 50%;
+	text-align: left;
+}
+
+.quote {
+	float: right;
+	width: 40%;
+}
+
+#top {
+	min-height: 100%;
+	background: white;
+}
+
+#about {
+	background: #A8A8A8 ;
+}
+
+#uclamap {
+	height: 45%;
+}
+
+#social {
+	background: #484848;
+}
+
+#banner {
+	height: 45%;
+}
+
+#banner img {
+	width: 100%;
+}
+
+#contact {
+	float: left;
+	width: 100%;
+	background: #181818;
+}
+
+#footer {
+	color: #CCCCCC;
+	background: black;
+	font-size: 75%;
+}
+
+/* Nav */
+
+nav {
+	position: fixed;
+	background: white;
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	z-index: 2;
+	box-shadow: 5px 5px 5px #888888;
+}
+
+nav a {
+	color: black;
+	padding: 15px;
+}
+
+nav a:hover {
+	font-weight: 700;
+}
+
+/* Intro */
+
+.intro {
+	margin: 50px;
+	font-weight: 300;
+}
+
+#introimg {
+	max-width: 1024px;
+	position: relative;
+	margin-top: 250px;
+	min-width: 300px;
+}
+
+#intro1 {color: #C0C0C0;}
+#intro2 {color: grey;}
+#intro3 {color: black;}
+
+#downarrow {
+	position: fixed;
+    z-index: 10;
+	bottom: 0px;
+	right: 0px;
+	margin: 30px;
+}
+
+#downarrow img {
+	width: 100px;
+}
+
+/* About */
+
+#portrait {
+	height: 400px;
+}
+
+#aboutbrief {
+	height: 400px;
+}
+
+/* Social Media */
+
+.social {
+	height: 600px;
+	text-align: center;
+}
+
+#twitter {
+}
+
+#linkedin {
+}
+
+#github {
+}
+
+#facebook {
+}
+
 /* Twitter Feed */
 
 .twitter-timeline
@@ -245,4 +235,41 @@ pre {
 
 #instalogo img:hover {
 	background: #B56C47;
+}
+
+/* Contact */
+
+#contactmethods {
+	text-align: center;
+}
+
+#contactmethods ul {
+	list-style-type: none;
+}
+
+.contacttitle {
+	font-size: 3em;
+	margin-bottom: 20px;
+}
+
+.contactbody {
+	font-size: 2em;
+	margin-bottom: 20px;
+}
+
+#contactmethods img {
+	max-width: 150px;
+	-webkit-filter: invert(100%);
+}
+
+#messageinput {
+	min-width: 500px;
+	height: 150px;
+}
+
+input[type=submit] {
+	padding:5px 15px; background:#ccc; border:0 none;
+	cursor:pointer;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
 }
