--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ h2 {
 }
 
 h3 { 
-   font-size: 3em; 
+   font-size: 2.5em; 
+   font-weight: 300;
 }
 
 p {
@@ -150,8 +151,8 @@ nav a:hover {
 #introimg {
 	max-width: 1024px;
 	position: relative;
-	margin-top: 250px;
-	min-width: 300px;
+	margin-top: 100px;
+	min-width: 600px;
 }
 
 #intro1 {color: #C0C0C0;}
@@ -260,12 +261,27 @@ nav a:hover {
 
 /* Contact */
 
-#contactmethods {
-	text-align: center;
+#contactwrapper {
+	min-height: 600px;
 }
 
-#contactmethods ul {
+#contactcontainer {
+	text-align: center;
+	padding-right: 20px;
+	
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid red;
+}
+
+#contactcontainer ul {
 	list-style-type: none;
+}
+
+#contactcontainer img {
+	max-width: 150px;
+	-webkit-filter: invert(100%);
 }
 
 .contacttitle {
@@ -278,13 +294,20 @@ nav a:hover {
 	margin-bottom: 20px;
 }
 
-#contactmethods img {
-	max-width: 150px;
-	-webkit-filter: invert(100%);
+#contactform {
+	padding-left: 20px;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid blue;
+}
+
+#contactform h3{
+	text-align: center;
 }
 
 #messageinput {
-	min-width: 500px;
+	min-width: 400px;
 	height: 150px;
 }
 
