--- a/style.css
+++ b/style.css
@@ -241,8 +241,14 @@ nav a:hover {
 	background: #4875B4;
 }
 
-#instalogo img:hover {
+#gitlogo img:hover {
 	background: white;
+}
+
+#icontitles p {
+	display: inline;
+	padding: 10px;
+	margin-right: 30px;
 }
 
 #twitter {
