--- a/style.css
+++ b/style.css
@@ -178,39 +178,38 @@ nav a:hover {
 
 #portrait {
 	height: 300px;
-	
-	box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	border: 1px solid red;
+	background: #181818;
+	box-shadow: 2px 2px 2px grey;
+}
+
+#portrait img {
+	height: 300px;	
+}
+
+#aboutbanner {
+	height: 250px;
+	padding-bottom: 40px;
 }
 
 #aboutbrief {
-	height: 400px;
-	
-	box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	border: 1px solid blue;
+	height: 300px;
+	background: #181818;
+	box-shadow: 2px 2px 2px grey;
+}
+
+#aboutbrief h3{
+	line-height: 20px;
 }
 
 #abouttext {
+	padding: 60px;
 	text-align: left;
-	
-	box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	border: 1px solid green;
 }
 
 .quote {
 	float: right;
 	width: 40%;
-	
-	box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	border: 1px solid yellow;
+	font-size: 1.5em;
 }
 
 /* Social Media */
