--- a/style.css
+++ b/style.css
@@ -103,12 +103,13 @@ pre {
 }
 
 #banner {
-	height: 45%;
+	height: 500px;
 	padding: 0;
 }
 
 #banner img {
 	width: 100%;
+	height: 100%;
 }
 
 #contact {
